--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,54 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+ .swiper {
+    width: 100%;
+    aspect-ratio: 1/1;
+  }
+
+  .swiper:hover{
+    .swiper-button-next{
+        display:block !important;
+    }
+
+    .swiper-button-prev {
+        display:block !important;
+    }
+  }
+
+  .swiper-button-next{
+    display: none !important;
+    background-color: #ffff;
+    width: 24px !important;
+    height: 24px !important;
+    border-radius: 50%; 
+    background-image: url('next.svg') !important;
+    border-width: 4px;
+    border-color: #ffff;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+  }
+
+  .swiper-button-next::after{
+    content: " "!important;
+  }
+
+  .swiper-button-prev{
+    display: none !important;
+    background-color: #ffff;
+    width: 24px !important;
+    height: 24px !important;
+    border-radius: 50%;
+    background-image: url('prev.svg') !important;
+    border-width: 4px;
+    border-color: #ffff;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+  }
+
+  .swiper-button-prev::after{
+    content: " "!important;
+  }
