--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,18 +3,39 @@
     <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
       <% @properties.each do |property| %>
         <div class="group relative">
-          <div class="swiper aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 ">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <% property.images.each do |image| %>
-                <%= image_tag url_for(image), class: "swiper-slide h-full w-full object-cover object-center lg:h-full lg:w-full" %>
-              <% end %>
+          <div class="relative overflow-hidden rounded-md bg-gray-200">
+            <div class="swiper">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <% property.images.each do |image| %>
+                  <%= image_tag url_for(image), class: "swiper-slide h-full w-full object-cover object-center lg:h-full lg:w-full" %>
+                <% end %>
+              </div>
+
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
             </div>
 
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="absolute z-10 right-0 top-0 m-4">
+              <svg xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 32 32" 
+              aria-hidden="true" 
+              role="presentation" 
+              focusable="false" 
+              class="block h-6 w-6 stroke-white stroke-2 <%= property.wishlisted_by?(current_user) ? 'fill-[#FF5A5F]' : 'fill-none'%>"
+              style="overflow: visible;"
+              data-controller="wishlist"
+              data-user-logged-in= "<%= user_signed_in? %>"
+              data-property-id="<%= property.id %>"
+              data-user-id="<%= current_user&.id %>"
+              data-action="click->wishlist#updateWishlistStatus"
+              data-wishlist-id="<%= property.wishlists.find_by(user: current_user)&.id || 'null'%>"
+              data-status="<%= property.wishlisted_by?(current_user) %>">
+                <path d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"></path>
+              </svg>
+            </div>
           </div>
           <div class="mt-2">
             <div class="flex justify-between">
@@ -38,7 +59,7 @@
                 <%= (property.average_final_rating).round(2) %>
               </p>
             </div>
-            <p class="mt-0.5 text-sm text-gray-500">Vistas para praia</p>
+            <%# TODO: Add distance from property based on location%>
             <p class="mt-0.5 text-sm text-gray-500">20-25 de fev.</p>
             <p class="mt-0.5 text-sm font-light text-black">
               <span class="font-medium"><%= humanized_money_with_symbol(property.price) %></span> 
@@ -50,9 +71,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
