--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -79,9 +79,10 @@
             <!-- Active: "bg-gray-100", Not Active: "" -->
 
             <% if user_signed_in? %>
+              <%= link_to "Wishlists"," ", class: "block px-4 py-2 text-sm text-gray-700", role:"menuitem",  tabindex:"-1" %>
               <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "block px-4 py-2 text-sm text-gray-700", role:"menuitem",  tabindex:"-1" %>
             <% else %>
-              <%= link_to "Log in", new_user_session_path , class:"block px-4 py-2 text-sm text-gray-700", role:"menuitem", tabindex:"-1"%>
+              <%= link_to "Log in", new_user_session_path, id:"login-id", class:"js-login block px-4 py-2 text-sm text-gray-700", role:"menuitem", tabindex:"-1"%>
               <%= link_to "Sigh up", new_user_registration_path , class:"block px-4 py-2 text-sm text-gray-700", role:"menuitem", tabindex:"-1"%>
             <% end %>
           
@@ -99,13 +100,17 @@
         </div>
         <div class="ml-3">
           <div class="text-base font-medium text-gray-800">Tom Cook</div>
-          <div class="text-sm font-medium text-gray-500">tom@example.com</div>
+          <div class="text-sm font-medium text-gray-500">
+            <% if user_signed_in? %>
+              <%= current_user.email %>
+            <% end %>
+            </div>
         </div>
       </div>
       <div class="mt-3 space-y-1 px-2">
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Log out</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Log in</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Sign up</a>
+        <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "block rounded-md px-3 py-2 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900", role:"menuitem",  tabindex:"-1" %>
+        <%= link_to "Log in", new_user_session_path, id:"login-id", class:"js-login block rounded-md px-3 py-2 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900", role:"menuitem", tabindex:"-1"%>
+        <%= link_to "Sigh up", new_user_registration_path , class:"block rounded-md px-3 py-2 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900", role:"menuitem", tabindex:"-1"%>
       </div>
     </div>
   </nav>
