--- a/app/views/properties/_amenities.html.erb
+++ b/app/views/properties/_amenities.html.erb
@@ -1,13 +1,15 @@
  <!-- Amenities -->
  <div class="border-t border-gray-200 pt-10 mt-4 ">
     <h2 class="text-2xl font-medium leading-6 text-gray-900">O que esse lugar oferece</h2>
-    <div class="my-6 grid grid-cols-1 lg:grid-cols-2">
-        <% amenities.each do |amenity|%>
+    <div class="my-6 grid grid-cols-1 md:grid-cols-2">
+        <% amenities.limit(8).each do |amenity|%>
             <div class="py-1.5 flex">
                 <%= image_tag "amenity_icons/#{amenity.icon}" , class: "h-6 w-6" %>
-                <p class="ms-2 text-lg font-normal text-gray-800"> <%= amenity.name %> </p>
+                <p class="ms-4 text-lg font-normal text-gray-800"> <%= amenity.name %> </p>
             </div>
         <% end %>
     </div>
-    <button type="button" class="rounded-lg border border-gray-600 bg-white px-6 py-2.5 text-lg font-medium text-black hover:bg-gray-100">Mostrar todos as <%= amenities.count %>  comodidades</button>
+    <%if (amenities.count > 8 )%>
+        <button type="button" class="rounded-lg border border-gray-600 bg-white px-6 py-2.5 text-lg font-medium text-black hover:bg-gray-100">Mostrar todas as <%= amenities.count %>  comodidades</button>
+    <% end %>
 </div>
